# terminal-launcher

./: .gitignore  LICENSE  README.md  app_main.py  llms.txt  pyproject.toml  requirements.txt  setup.py  setup_py2app.py  workspaces.example.json
.github/workflows/: tests.yml
docs/: README.html  README.md  concept.html  concept.md  render.py
docs/decisions/: 0001-terminal-layer-and-core.html  0001-terminal-layer-and-core.md  0002-identity-injection.html  0002-identity-injection.md  0003-visual-composer-pywebview.html  0003-visual-composer-pywebview.md  0004-heterogeneous-panes-and-window-placement.html  0004-heterogeneous-panes-and-window-placement.md  0005-combo-flip-and-partial-compaction.html  0005-combo-flip-and-partial-compaction.md  0006-workspace-reordering-affordance.html  0006-workspace-reordering-affordance.md  0007-iterm2-backend-and-real-gap-layouts.html  0007-iterm2-backend-and-real-gap-layouts.md  0008-one-window-per-pane-and-windows-terminal-backend.html  0008-one-window-per-pane-and-windows-terminal-backend.md  0009-restore-pane-identity.html  0009-restore-pane-identity.md  README.html  README.md
docs/product/: Concepts.html  Concepts.md  Overview.html  Overview.md  Platforms-and-Status.html  Platforms-and-Status.md  README.html  README.md  User-Guide.html  User-Guide.md  concepts.html  concepts.md  overview.html  overview.md  platforms-and-status.md  (+3 more)
packaging/: README.md  icon.icns  install-macos.sh  make-icon.py
terminal_launcher/: __init__.py  backend.py  cli.py  config.py  diag.py  gui.py  iterm2_backend.py  layouts.py  model.py  restore.py  wezterm.py  windows_terminal_backend.py
tests/: test_config.py  test_env_scrub.py  test_layouts.py  test_model.py  test_restore.py
(+56 files in other folders)
